# Experimental-Robotics-Project.2022

./: .gitignore  .gitmodules  README.md  launch_exprob.sh  pathsetter.sh  ros_install.sh
docs/: api.html  conf.py  genindex.html  index.html  introduction.html  objects.inv  search.html  searchindex.js  software_architecture.html
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  introduction.doctree  limitations.doctree  software_architecture.doctree
docs/_build/html/: .buildinfo  api.html  py-modindex.html
docs/_build/html/_modules/scripts/: controller.html  knowledge_client.html  navigation.html
docs/_build/html/_sources/: api.rst.txt  index.rst.txt
docs/_modules/scripts/modules/: states.html
docs/_sources/: installation.rst.txt  limitations.rst.txt  software_architecture.rst.txt
docs/sphinx_docs/: conf.py
docs/sphinx_docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  introduction.doctree  limitations.doctree  software_architecture.doctree
docs/sphinx_docs/_build/html/: .buildinfo  installation.html  limitations.html
docs/sphinx_docs/_build/html/_modules/: index.html
docs/sphinx_docs/_build/html/_modules/scripts/: knowledge_client.html
exprob_control/: CMakeLists.txt  package.xml
exprob_control/scripts/: controller.py  robot_state.py
exprob_knowledge/: CMakeLists.txt  package.xml
exprob_knowledge/launch/: knowledge.launch
exprob_knowledge/params/: topological_map.yaml
exprob_knowledge/scripts/: detect_markers.py  knowledge_client.py
exprob_knowledge/src/: aruco_ros_utils.cpp  marker_publish.cpp
exprob_logic/: CMakeLists.txt  package.xml
exprob_logic/launch/: surveillance.launch  test.launch
exprob_logic/scripts/: state_machine.py
exprob_logic/scripts/modules/: states.py
exprob_msgs/: CMakeLists.txt  package.xml
exprob_msgs/action/: Robot.action  RobotController.action  RobotNav.action
exprob_msgs/srv/: Knowledge.srv  RobotNav.srv  RobotState.srv
exprob_navigation/: CMakeLists.txt  package.xml
exprob_navigation/launch/: navigation.launch  topology.launch
exprob_navigation/params/: topological_map.yaml
exprob_navigation/scripts/: navigation.py
